Fix dropdown menu width on iPad portrait to prevent text cutoff in My Account submenu.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -289,7 +289,7 @@ input[type='submit']:focus {
   position: absolute;
   right: 0;
   background-color: white;
-  min-width: 180px;
+  min-width: 220px;
   box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
   z-index: 1000;
   padding: 0.5rem 0;
